# server.js
@@ -1,5 +1,8 @@
 const express = require('express');
 const cors = require('cors');
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('./swagger.json');
+
 require('dotenv').config();
 
 const connectDb = require('./data/database');
@@ -10,11 +13,14 @@ const port = process.env.PORT || 8080;
 app.use(cors());
 app.use(express.json());
 
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
 app.get('/', (req, res) => {
-  res.send('Contacts API using Mongoose');
+  res.send('Contacts and Companies API using Mongoose');
 });
 
 app.use('/contacts', require('./routes/contacts'));
+app.use('/companies', require('./routes/companies'));
 
 const startServer = async () => {
   await connectDb();
